--- a/home.html
+++ b/home.html
@@ -21,22 +21,22 @@
                     <em>   </em>
                 </li>
                 <li class="navbuttons" id="home">
-                    <p class="navwords">Home</p>
+                    <a href="home.html"><p class="navwords">Home</p></a>
                 </li>
-                <li class="navbuttons" id="bio">
-                    <p class="navwords">About</p>
+                <li class="navbuttons" id="about">
+                    <a href="about.html"><p class="navwords">About</p></a>
                 </li>
                 <li class="navbuttons" id="audio">
-                    <p class="navwords">Audio</p>
+                    <a href="audio.html"><p class="navwords">Audio</p></a>
                 </li>
                 <li class="navbuttons" id=video>
-                    <p class="navwords">Video</p>
+                    <a href="videos.html"><p class="navwords">Video</p></a>
                 </li>
                 <li class="navbuttons" id="photos">
-                    <p class="navwords">Photos</p>
+                    <a href="photos.html"><p class="navwords">Photos</p></a>
                 </li>
                 <li class="navbuttons" id="contact">
-                    <p class="navwords">Contact</p>
+                    <a href="contact.html"><p class="navwords">Contact</p></a>
                 </li>
                 
             </ul>    
