--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <title>Eliot Seppa</title>
+        <title>Eliot Seppa - Home</title>
         <link type="text/css" rel="stylesheet" href="homeStylesheet.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
