--- a/audio.html
+++ b/audio.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <title>Eliot Seppa</title>
+        <title>Eliot Seppa - Audio</title>
         <link type="text/css" rel="stylesheet" href="ejsStylesheet.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
