--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <body>
         
         <div class="navwrap">
-            <img id="logo1" src="ejslogotransparency.png">
+            <img id="logo1" src="ejsLogotransparency.png">
             <ul class="navbar">
                 <li>  
                     <img id="logo" src="ejslogotransparency.png">
