--- a/photos.html
+++ b/photos.html
@@ -12,7 +12,7 @@
          <div class="navwrap">
             <ul class="navbar">
                 <li>
-                    <img id="logo" src="ejslogotransparency.png">
+                    <img id="logo" src="ejsLogotransparency.png">
                 </li>
                 
                 <li class="navbuttons" id="home">
