--- a/audio.html
+++ b/audio.html
@@ -7,13 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="favicon.ico">
         <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </head>
     <body>
          <div class="navwrap">
             <ul class="navbar">
                 <li>
-                    <img id="logo" src="ejslogotransparency.png">
+                    <img id="logo" src="ejsLogotransparency.png">
                 </li>
                 
                 <li class="navbuttons" id="home">
