--- a/videos.html
+++ b/videos.html
@@ -9,13 +9,12 @@
         <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </head>
     <body>
         <div class="navwrap">
             <ul class="navbar">
                 <li>
-                    <img id="logo" src="ejslogotransparency.png">
+                    <img id="logo" src="ejsLogotransparency.png">
                 </li>
                 
                 <li class="navbuttons" id="home">
