--- a/ejsHTMLframework.html
+++ b/ejsHTMLframework.html
@@ -31,10 +31,10 @@
                     <a href="videos.html"><p class="navwords">Video</p></a>
                 </li>
                 <li class="navbuttons" id="gigs">
-                    <a href=""><p class="navwords">Gigs</p></a>
+                    <a href="gigs.html"><p class="navwords">Gigs</p></a>
                 </li>
                 <li class="navbuttons" id="discography">
-                    <a href=""><p class="navwords">Discography</p></a>
+                    <a href="discography.html"><p class="navwords">Discography</p></a>
                 </li>
                 <li class="navbuttons" id="photos">
                     <a href="photos.html"><p class="navwords">Photos</p></a>
