--- a/videos.html
+++ b/videos.html
@@ -81,20 +81,20 @@
                 <table class="vidTable">
                   <tr>  
                     <td class="vidCells">
-                        <embed class="vids" src="https://www.youtube.com/embed/_z4I-cQV89Q" allowfullscreen></embed>
+                        <iframe class="vids" src="https://www.youtube.com/embed/_z4I-cQV89Q" frameborder="0" allowfullscreen></iframe>
                     </td>
                     <td class="vidCells">
-                        <embed class="vids" src="https://www.youtube.com/embed/NrP1fxsv7NU" allowfullscreen></embed>              
+                        <iframe class="vids" src="https://www.youtube.com/embed/NrP1fxsv7NU" frameborder="0" allowfullscreen></iframe>              
                     </td>
                   </tr>
                   <tr>
                     <td class="vidCells">
-                        <embed class="vids" src="https://www.youtube.com/embed/yeZ4ZTHwPns" allowfullscreen></embed> 
+                        <iframe class="vids" src="https://www.youtube.com/embed/yeZ4ZTHwPns" frameborder="0" allowfullscreen></iframe> 
                     </td>
                     
                     
                     <td class="vidCells">
-                        <embed class="vids" src="https://www.youtube.com/embed/D7RAULFn4zo" allowfullscreen></embed>
+                        <iframe class="vids" src="https://www.youtube.com/embed/D7RAULFn4zo" frameborder="0" allowfullscreen></iframe>
                     </td>
                   </tr>
                   <tr>
