--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <br><br>
         <div id="main">
             <h1 id="name">Eliot Seppa</h1>
-            <h2>Bassist & Composer</h2>
+            <h2 class="subHeading">Bassist & Composer</h2>
             <div id="blurb">
                 <p>Eliot Seppa is a Washington DC based upright and electric bass player. With a solid foundation of technical ability and music theory, Eliot understands, respects, and embraces the history and the role of the bass in different genres and music in general. He is inspired by great past and current musicians and composers, art, film, nature, and everyday life - the more Eliot learns, the more he is driven to advance the tradition with his own musical voice as a bassist, composer, and a bandleader.</p>
             </div>
